--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,63 @@
-// TODO
+.banner {
+  max-width: 1440px;
+  max-height: 400px;
+}
+
+.container {
+  max-width: 721px;
+  margin: 50px auto;
+
+  h1 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 58px;
+
+    letter-spacing: -0.5px;
+
+    color: #f8f8f8;
+  }
+
+  h2 {
+    margin: 45px 0 35px 0;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 140%;
+
+    text-align: justify;
+
+    color: #f8f8f8;
+  }
+
+  p + p {
+    margin-top: 20px;
+  }
+
+  p {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 140%;
+
+    text-align: justify;
+
+    color: #d7d7d7;
+
+    a {
+      text-decoration: none;
+      font-family: Inter;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 140%;
+
+      text-align: justify;
+
+      color: #ff57b2;
+    }
+  }
+}
